--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   logger: ^2.0.1
   path_provider: ^2.0.5
+  wd_screen_button:
+    path: ../../sihua/wd_packages/wd_screen_button
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
