--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,11 +49,11 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   logger: ^2.0.1
   path_provider: ^2.0.5
-  wd_screen_button:
-    path: ../../sihua/wd_packages/wd_screen_button
+#  wd_screen_button:
+#    path: ../../sihua/wd_packages/wd_screen_button
 
-#  wdlogger:
-#    path: ../../sihua/wd_packages/wdlogger
+  wdlogger:
+    path: ../../sihua/wd_packages/wdlogger
 
 
 # For information on the generic Dart part of this file, see the
